adding in the ability to delete sessions

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -27,7 +27,7 @@
   --color-neutral2: #071B2A;
   --color-neutral2-contrast: #FFFDF6;
   --color-neutral3: #120044;
-  --color-neutral3-contrast: #FFFDF6;
+  --color-neutral3-contrast: #dee0e0;
   
   --font-primary: 'PrimaryFont', sans-serif;
   --font-secondary: 'SecondaryFont', sans-serif;
